[tool.poetry]
name = "asbd"
version = "0.1.0"
description = ""
authors = ["Ruslan Sirazhetdinov <ruslansir@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
fastapi = "^0.112.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.31"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
